--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "http-errors": "^2.0.0",
+    "http-status-codes": "^2.2.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "mongoose-timestamp": "^0.6.0",
