--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
-    "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.5.0",
-    "winston": "^3.8.1"
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
+    "winston": "^3.8.1",
+    "yaml": "^2.1.1"
   }
 }
