--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "mongoose-timestamp": "^0.6.0",
