--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "auto-bind": "^4.0.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "^4.3.2",
     "express": "^4.18.1",
