--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.4.3",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
+    "redis": "^4.2.0",
     "request": "^2.88.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0",
